test/CheckError/Cast/ConstRefMemberVarImplicitDissolve.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass(int& member) {
	int& getRef() const {
		// Error: member is const here.
		// CHECK: .loci:8:3: error: Can't implicitly cast value of type 'ref<lval<ref<const(int_t)>(const(const(int_t)&))>(const(value_lval_t<ref<const(int_t)>(const(const(int_t)&))>))>(lval<ref<const(int_t)>(const(const(int_t)&))>(const(value_lval_t<ref<const(int_t)>(const(const(int_t)&))>))&)' to type 'ref<int_t>(int_t&)'.
		return @member;
	}
}

// CHECK: 1 error generated.
